# ai_to_params

./: .gitignore  AF3_Test.cif  Chai_Test.cif  README.md  ai_to_params.py  cli.py  constants.py  pyproject.toml  relax_score.py  rosetta_params_utils.py
ai_to_params.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_atom_numbering.py  test_bond_inference.py  test_chain_naming.py  test_constants.py  test_dihedral.py  test_fixes.py  test_metal_naming.py  test_parameterization.py
