[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-to-params"
version = "0.2.0"
description = "Convert AI-generated protein-ligand complexes to Rosetta params files, relax, and score."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Siegel Lab"}
]
requires-python = ">=3.8"
dependencies = [
  "biopython>=1.79",
  "rdkit>=2023.3.1",
]

[project.optional-dependencies]
relax = [
  "pyrosetta",
]
dev = [
  "pytest>=7.0",
]

[project.scripts]
ai-to-params = "cli:main"
ai-to-params-convert = "ai_to_params:main"
ai-to-params-relax = "relax_score:main"

[project.urls]
Homepage = "https://github.com/SiegelLab/general_protein_ml"

[tool.setuptools]
py-modules = ["ai_to_params", "rosetta_params_utils", "constants", "relax_score", "cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
